# userapp-api

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
api/: __init__.py
api/common/: authentication.py  db.py  enums.py
api/models/: __init__.py  common.py  users.py
api/routes/: auth.py  users.py
api/schemas/: auth.py  users.py
conf/: __init__.py  settings.py
